# Aut_Sci_Write

./: .gitignore  .npmignore  LICENSE  README.md  index.js  init-env.js  package.json  requirements.txt  ruff.toml  skills-cli.js
docs/: index.html
scripts/: extract_core_insights.py  sci_search.py  zotero.py
skills/sci-html/: .gitignore  LICENSE  README.md  SKILL.md  THIRD_PARTY_NOTICES.md  _meta.json  conftest.py  pyproject.toml  requirements.txt
skills/sci-html/examples/: sample_outline.md  sample_slides.md  uconversion_review.md
skills/sci-html/scripts/: generate_html_deck.py
skills/sci-html/src/sci_html/: __init__.py  cli.py  models.py  paper_pipeline.py  parser.py  renderer.py
skills/sci-html/src/sci_html/integrations/extract/: SKILL.sci-extract.md  core_insights.py
skills/sci-html/src/sci_html/integrations/figure/: LICENSE  README.sci-figure.md  cli.py  exceptions.py  figure_detector.py  image_processor.py  pdf_parser.py  subfigure_splitter.py  utils.py
skills/sci-html/templates/: deck.js  index.html.j2
skills/sci-html/tests/: _path.py  golden_cases.json  test_paper_pipeline.py  test_parser.py  test_renderer.py
skills/sci-html/themes/: academic-blue.css  journal-dark.css
skills/sci-ppt/: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
skills/sci-ppt/src/aut_sci_ppt/: __init__.py  academic_parser.py  agent.py  config.py  enhanced_agent.py  interactive.py  layout_engine.py  main.py  models.py  paper_workflow.py  pdf_extractor.py  run.py
skills/sci-ppt/src/aut_sci_ppt/generator/: formula_renderer.py
skills/sci-ppt/src/aut_sci_ppt/paginator/: smart_paginator.py
skills/sci-ppt/src/aut_sci_ppt/parser/: ai_parser.py  text_parser.py
skills/sci-ppt/src/aut_sci_ppt/templates/: __init__.py  base.py  content_detail.py  content_figure.py  content_list.py  ending.py  section.py  timeline.py
skills/sci-ppt/src/aut_sci_ppt/tests/: test_agent.py
tests/: test_extract_core_insights.py  test_sci_review_validation.py  test_sci_search.py
(+38 files in other folders)
