[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sci-html"
version = "0.1.0"
description = "Generate academic presentation-style HTML slide decks."
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
paper = [
    "sci-figure>=2.0.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
sci-html = "sci_html.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
