[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aut-sci-ppt"
version = "0.1.0"
description = "Scientific PPT Generator with LaTeX rendering and academic semantic parsing."
authors = [
    {name = "ShuoClaw", email = "author@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=0.6.21",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "lxml>=4.9.0",
    "pymupdf>=1.24.0",
    "pyyaml>=6.0"
]

[project.scripts]
aut-sci-ppt = "aut_sci_ppt.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aut_sci_ppt*"]
